--- a/.github/workflows/prueba.yml
+++ b/.github/workflows/prueba.yml
@@ -27,7 +27,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: WILSON BAQUERO,HOLA MUNDO!
+        run: echo WILSON BAQUERO,HOLA MUNDO!
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
